Fixed question text overflow going out of viewport

--- a/styles/components/mcq.css
+++ b/styles/components/mcq.css
@@ -7,6 +7,7 @@
 .mcq .question {
   margin-bottom: 2rem;
   font-size: 1.25rem;
+  overflow-x: scroll;
 }
 
 .mcq .choices {
