--- a/styles/components/quiz_mcq.css
+++ b/styles/components/quiz_mcq.css
@@ -6,6 +6,7 @@
 #quiz-mcq .question {
   margin-bottom: 2rem;
   font-size: 1.25rem;
+  overflow-x: scroll;
 }
 
 #quiz-mcq .choices {
